--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -41,13 +41,38 @@ a {
 
 p {
   margin: 2rem 0 2rem 0;
+
   @media only screen and (max-width: 768px) {
     margin: 1.5rem 0 1.5rem 0;
   }
 }
 
+h2 {
+  font-family: $font-family;
+  font-weight: 400;
+  color: $alt-fg-color;
+  margin: 4rem 0 2.5rem 0;
+
+  &:hover .heading-link {
+    visibility: visible;
+  }
+
+  .heading-link {
+    color: $link-color;
+    font-weight: inherit;
+    text-decoration: none;
+    font-size: 80%;
+    visibility: hidden;
+  }
+
+  .title-link {
+    color: inherit;
+    font-weight: inherit;
+    text-decoration: none;
+  }
+}
+
 h1,
-h2,
 h3,
 h4,
 h5,
@@ -142,6 +167,7 @@ strong {
 }
 
 .highlight {
+
   div,
   pre {
     margin: 2rem 0 2rem;
@@ -177,6 +203,7 @@ code {
   padding: 0.3rem 0.6rem;
   background-color: $darker-alt-bg-color;
   color: $fg-color;
+
   @media only screen and (max-width: 768px) {
     font-size: 1.5rem;
   }
@@ -189,6 +216,7 @@ blockquote {
   font-weight: 400;
   font-style: italic;
 }
+
 * {
   -webkit-tap-highlight-color: transparent;
 }
